crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__package__test__glob_target_rejected_in_package.snap
---
source: crates/pixi_manifest/src/toml/package.rs
expression: "format_parse_error(input, parse_error)"
---
  × the wildcard target selector 'cuda-*' is not supported in package targets
   ╭─[pixi.toml:8:18]
 7 │
 8 │         [target."cuda-*".host-dependencies]
   ·                  ───┬──
   ·                     ╰── wildcard target selector specified here
 9 │         cuda = "12"
   ╰────
  help: Use a concrete platform name, such as `linux-64`, instead of a wildcard.
