crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__package__test__invalid_extra_key.snap
---
source: crates/pixi_manifest/src/toml/package.rs
expression: "expect_parse_failure(r#\"\n        foo = \"bar\"\n        name = \"bla\"\n        extra = \"key\"\n\n        [build]\n        backend = { name = \"bla\", version = \"1.0\" }\n        \"#,)"
---
  × Unexpected keys, expected only 'name', 'version', 'description', 'authors', 'license', 'license-file', 'readme', 'homepage', 'repository', 'documentation', 'host-dependencies', 'build-
  │ dependencies', 'run-dependencies', 'extra-dependencies', 'run-constraints', 'run-exports', 'publish', 'build', 'target'
   ╭─[pixi.toml:2:9]
 1 │
 2 │         foo = "bar"
   ·         ─┬─
   ·          ╰── 'foo' was not expected here
 3 │         name = "bla"
 4 │         extra = "key"
   ·         ──┬──
   ·           ╰── 'extra' was not expected here
 5 │
   ╰────
