crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__package__test__missing_name_no_inheritance.snap
---
source: crates/pixi_manifest/src/toml/package.rs
expression: "format_parse_error(input, parse_error)"
---
  × missing field 'name' in table
   ╭─[pixi.toml:1:1]
 1 │ ╭─▶
 2 │ │           version = "1.0.0"
 3 │ │
 4 │ │           [build]
 5 │ │           backend = { name = "bla", version = "1.0" }
 6 │ ╰─▶
   ╰────
