crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__package__test__optional_workspace_inheritance_missing_workspace_value.snap
---
source: crates/pixi_manifest/src/toml/package.rs
expression: "format_parse_error(input, parse_error)"
---
  × the workspace does not define a 'description'
   ╭─[pixi.toml:4:23]
 3 │         version = "1.0.0"
 4 │         description = { workspace = true }
   ·                       ────────────────────
 5 │
   ╰────
