crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__package__test__workspace_inheritance_missing_workspace_value.snap
---
source: crates/pixi_manifest/src/toml/package.rs
expression: "format_parse_error(input, parse_error)"
---
  × the workspace does not define a 'name'
   ╭─[pixi.toml:2:16]
 1 │
 2 │         name = { workspace = true }
   ·                ────────────────────
 3 │         version = "1.0.0"
   ╰────
